@@ -5,24 +5,25 @@ import com.ca.formation.formationdemo1.models.Utilisateur;
 import io.jsonwebtoken.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
 
 import java.util.Date;
+import java.util.stream.Collectors;
 
 @Component
 public class JwtUtil {
 
     // mettre le jwtSecret= "Base-64"
-    @Value("${bayembacke.app.jwtSecret}")
-    private  String jwtSecret;
+    private  static String jwtSecret="TWV0dHJlIG1vbiB0b2tlbiBlbiBiYXNlIDY0IA==";
+
     // generer JWT
 
     Logger logger= LoggerFactory.getLogger(JwtUtil.class);
 
     public String generateAccesToken(Utilisateur utilisateur){
         Claims claims = Jwts.claims().setSubject(utilisateur.getUsername());
-        claims.put("scopes", utilisateur.getAuthorities().stream().toList());
+        claims.put("scopes", utilisateur.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
         return Jwts.builder()
                 .setClaims(claims)
                 .setSubject(utilisateur.getName()+","+utilisateur.getUsername())
@@ -71,15 +72,20 @@ public class JwtUtil {
             Jwts.parser().setSigningKey(jwtSecret).parseClaimsJws(token);
             return true;
         } catch (SignatureException ex){
-            logger.info("Invalide Signature Jwt - {}",ex.getMessage());
+            logger.info("Invalide Signature Jwt - ");
+            logger.info(ex.getMessage());
         } catch (ExpiredJwtException ex){
-            logger.info("Expiration du Jwt - {}",ex.getMessage());
+            logger.info("Expiration du Jwt - ");
+            logger.info(ex.getMessage());
         }catch (UnsupportedJwtException ex){
-            logger.info("Token jwt non supporté - {}",ex.getMessage());
+            logger.info("Token jwt non supporté - ");
+            logger.info(ex.getMessage());
         }catch (IllegalArgumentException ex){
-            logger.info("Invalide claims Jwt - {}",ex.getMessage());
+            logger.info("Invalide claims Jwt - ");
+            logger.info(ex.getMessage());
         }catch (MalformedJwtException ex){
-            logger.info("Token jwt mal formatter - {}",ex.getMessage());
+            logger.info("Token jwt mal formatter - ");
+            logger.info(ex.getMessage());
         }
 
         return false;
